finished index and created starting point for portfolio and links pages

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="portfolio.html">Portfolio</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Links</a>
+                </li>
             </ul>
         </div>
     </nav>
@@ -49,14 +52,15 @@
 
                     <div class="card-body">
                         <h3 class="card-title">Garrett Reichman</h3>
-                        <p class="card-text"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem velit modi
-                            dignissimos, praesentium est tempore quisquam saepe at placeat? Iste odit non perferendis
-                            quis illo distinctio culpa quaerat excepturi accusamus!</p>
+                        <p class="card-text"> I am a growing software developer with experience in many different
+                            languages and technologies. I have a bachelors degree in Computer
+                            Science from the University of Georgia and am currently taking part
+                            in a Full Stack Development bootcamp at Georgia Tech.</p>
                     </div>
                     <ul class="list-group list-group-flush">
-                        <a class="list-group-item" href="#">Cras justo odio</a>
-                        <a class="list-group-item" href="#">Dapibus ac facilisis in</a>
-                        <a class="list-group-item" href="#">Vestibulum at eros</a>
+                        <p class="list-group-item">Location: Newnan, GA</p>
+                        <p class="list-group-item">Email: Gsreichman@gmail.com</p>
+                        <p class="list-group-item">Phone: 404-491-4713</p>
                     </ul>
                 </div>
             </div>
