--- a/index.html
+++ b/index.html
@@ -1,71 +1,199 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE HTML>
+<!--
+	Forty by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
 
 <head>
-    <title>Developer Portfolio</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-
-    <link rel="stylesheet" href="assets/css/style.css">
-    <script src="assets/javascript/script.js" defer></script>
+	<title>Developer Portfolio</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
 
-<body>
+<body class="is-preload">
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html">Garrett Reichman</a>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Links</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+	<!-- Wrapper -->
+	<div id="wrapper">
 
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-7">
-                <div class="card justify-content-center">
-                    <img class="card-img-top mr-3 rounded" src="assets/pictures/photo2.png" alt="photo">
+		<!-- Header -->
+		<header id="header" class="alt">
+			<a href="index.html" class="logo"><strong>Portfolio</strong></a>
+			<nav>
+				<a href="#menu">Menu</a>
+			</nav>
+		</header>
 
-                    <div class="card-body">
-                        <h3 class="card-title">Garrett Reichman</h3>
-                        <p class="card-text"> I am a growing software developer with experience in many different
-                            languages and technologies. I have a bachelors degree in Computer
-                            Science from the University of Georgia and am currently taking part
-                            in a Full Stack Development bootcamp at Georgia Tech.</p>
-                    </div>
-                    <ul class="list-group list-group-flush">
-                        <p class="list-group-item">Location: Newnan, GA</p>
-                        <p class="list-group-item">Email: Gsreichman@gmail.com</p>
-                        <p class="list-group-item">Phone: 404-491-4713</p>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
+		<!-- Menu -->
+		<nav id="menu">
+			<ul class="links">
+				<li><a href="index.html">Home</a></li>
+				<li><a href="landing.html">Projects</a></li>
+			</ul>
+		</nav>
+
+		<!-- Banner -->
+		<section id="banner" class="major">
+			<div class="inner">
+				<header class="major">
+					<h1>Hi, my name is Garrett Reichman</h1>
+				</header>
+				<div class="content">
+					<p>Full Stack Web Developer with a Computer Science degree from the University of Georgia and a
+						certificate in Full Stack Development from Georgia Tech Professional Education. Experience with
+						various web technologies such as JavaScript, HTML, Node, Express, and React. A highly determined
+						programmer that enjoys learning new technologies and coming up with creative solutions to
+						problems. Recently worked with 3 other developers on a MERN app that helps music tutors and
+						aspiring musicians connect with each other and share their knowledge. Looking forward to
+						utilizing my skills to assist teams in creating meaningful web applications.</p>
+					<!-- <ul class="actions">
+						<li><a href="#one" class="button next scrolly">Get Started</a></li>
+					</ul> -->
+				</div>
+			</div>
+		</section>
+
+		<!-- Main -->
+		<div id="main">
+
+			<!-- One -->
+			<section id="one" class="tiles"
+				style="text-shadow: rgb(0, 0, 0) 3px 0px 0px, rgb(0, 0, 0) 2.83487px 0.981584px 0px, rgb(0, 0, 0) 2.35766px 1.85511px 0px, rgb(0, 0, 0) 1.62091px 2.52441px 0px, rgb(0, 0, 0) 0.705713px 2.91581px 0px, rgb(0, 0, 0) -0.287171px 2.98622px 0px, rgb(0, 0, 0) -1.24844px 2.72789px 0px, rgb(0, 0, 0) -2.07227px 2.16926px 0px, rgb(0, 0, 0) -2.66798px 1.37182px 0px, rgb(0, 0, 0) -2.96998px 0.42336px 0px, rgb(0, 0, 0) -2.94502px -0.571704px 0px, rgb(0, 0, 0) -2.59586px -1.50383px 0px, rgb(0, 0, 0) -1.96093px -2.27041px 0px, rgb(0, 0, 0) -1.11013px -2.78704px 0px, rgb(0, 0, 0) -0.137119px -2.99686px 0px, rgb(0, 0, 0) 0.850987px -2.87677px 0px, rgb(0, 0, 0) 1.74541px -2.43999px 0px, rgb(0, 0, 0) 2.44769px -1.73459px 0px, rgb(0, 0, 0) 2.88051px -0.838247px 0px;">
+				<article>
+					<span class="image">
+						<img src="images/archer.jpg" alt="" />
+					</span>
+					<header class="major">
+						<h3><a href="archer.html" class="link">Archer Forums</a></h3>
+						<p>A basic forums for fans of the show Archer</p>
+					</header>
+				</article>
+				<article>
+					<span class="image">
+						<img src="images/weather.png" alt="" />
+					</span>
+					<header class="major">
+						<h3><a href="weather.html" class="link">Weather Tracker</a></h3>
+						<p>Provides current and future weather conditions for chosen cities</p>
+					</header>
+				</article>
+				<article>
+					<span class="image">
+						<img src="images/home.jpg" alt="" />
+					</span>
+					<header class="major">
+						<h3><a href="rick.html" class="link">Rick and Morty Fan Site</a></h3>
+						<p>Contains information and a game for the show Rick and Morty as well as allowing the user to
+							find where to watch the show in their country</p>
+					</header>
+				</article>
+				<article>
+					<span class="image">
+						<img src="images/posts.png" alt="" />
+					</span>
+					<header class="major">
+						<h3><a href="music.html" class="link">Music is for Me</a></h3>
+						<p>Community website to help connect music teachers and students</p>
+					</header>
+				</article>
+				<article>
+					<span class="image">
+						<img src="images/employees.png" alt="" />
+					</span>
+					<header class="major">
+						<h3><a href="employee.html" class="link">Employee Directory</a></h3>
+						<p>Provides an interface for viewing a list of employees as well as providing searching/sorting
+							functionality</p>
+					</header>
+				</article>
+			</section>
+
+			<!-- Two -->
+			<section id="two">
+				<div class="inner">
+					<header class="major">
+						<h2>Proficiencies</h2>
+					</header>
+					<div class="row">
+						<div class="col-6">
+							<ul class="alt">
+								<li>Javascript</li>
+								<li>JQuery</li>
+								<li>HTML</li>
+								<li>MySQL</li>
+
+							</ul>
+						</div>
+						<div class="col-6">
+							<ul class="alt">
+								<li>MongoDB</li>
+								<li>React.js</li>
+								<li>Node.js</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</section>
+
+		</div>
+
+
+		<section>
+			<div class="contact-method">
+				<span class="icon solid alt fa-envelope"></span>
+				<h3>Email</h3>
+				<a href="#">Gsreichman@gmail.com</a>
+			</div>
+		</section>
+		<section>
+			<div class="contact-method">
+				<span class="icon solid alt fa-phone"></span>
+				<h3>Phone</h3>
+				<span>404-491-4713</span>
+			</div>
+		</section>
+		<section>
+			<div class="contact-method">
+				<span class="icon solid alt fa-home"></span>
+				<h3>Address</h3>
+				<span>92 Arbor Way<br />
+					Newnan, GA 30265<br />
+					United States of America</span>
+			</div>
+		</section>
+
+		<hr />
+
+		<!-- Footer -->
+		<footer id="footer">
+			<div class="inner">
+				<ul class="icons">
+					<li><a href="https://github.com/GReichman" class="icon brands alt fa-github"><span
+								class="label">GitHub</span></a></li>
+					<li><a href="https://www.linkedin.com/in/garrettreichman/"
+							class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+				</ul>
+				<ul class="copyright">
+					<li>&copy; Garrett Reichman</li>
+					<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+				</ul>
+			</div>
+		</footer>
+
+	</div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
 
 </body>
 
