--- a/index.html
+++ b/index.html
@@ -159,9 +159,8 @@
 		<section>
 			<div class="contact-method">
 				<span class="icon solid alt fa-home"></span>
-				<h3>Address</h3>
-				<span>92 Arbor Way<br />
-					Newnan, GA 30265<br />
+				<h3>Location</h3>
+				<span>Newnan, GA<br />
 					United States of America</span>
 			</div>
 		</section>
