added technology sections

--- a/archer.html
+++ b/archer.html
@@ -69,6 +69,14 @@
 						</div>
 						<div class="col-6">
 							<section>
+								<h3>Technologies</h3>
+								<ul>
+									<li>Bootstrap</li>
+									<li>Express.js</li>
+									<li>Express Handlebars</li>
+									<li>Passport</li>
+									<li>MySQL</li>
+								</ul>
 								<h3>Sample Account</h3>
 								<ul>
 									<li>email: guest@email.com</li>
