--- a/employee.html
+++ b/employee.html
@@ -44,6 +44,20 @@
 									</header>
 									<span class="image main"><img src="images/employees.png" alt="" /></span>
 									<p>Provides an interface for viewing a list of employees as well as providing searching/sorting functionality</p>
+									<div class="row">
+										<div class="col-6">
+											<section>
+												<h3>Technologies</h3>
+												<ul>
+													<li>HTML</li>
+													<li>CSS</li>
+													<li>Bootstrap</li>
+													<li>Javascript</li>
+													<li>React.js</li>
+												</ul>
+											</section>
+										</div>
+										<div class="col-6">
 									<section>
 										<div class="contact-method">
 											<span class="icon brands alt fa-github"></span>
@@ -58,6 +72,8 @@
 											<a href="https://greichman.github.io/employee-directory/">https://greichman.github.io/employee-directory/</a>
 										</div>
 									</section>
+									</div>
+									</div>
 								</div>
 							</section>
 
