--- a/music.html
+++ b/music.html
@@ -69,6 +69,13 @@
 						</div>
 						<div class="col-6">
 							<section>
+								<h3>Technologies</h3>
+								<ul>
+									<li>Express.js</li>
+									<li>React Bootstrap</li>
+									<li>React.js</li>
+									<li>Mongoose</li>
+								</ul>
 								<h3>Sample Account</h3>
 								<ul>
 									<li>email: guest@email.com</li>
