--- a/rick.html
+++ b/rick.html
@@ -44,20 +44,37 @@
 									</header>
 									<span class="image main"><img src="images/home.jpg" alt="" /></span>
 									<p>Contains information and a game for the show Rick and Morty as well as allowing the user to find where to watch the show in their country</p>
-									<section>
-										<div class="contact-method">
-											<span class="icon brands alt fa-github"></span>
-											<h3>Repository</h3>
-											<a href="https://github.com/rforde1/Rick-and-Morty">https://github.com/rforde1/Rick-and-Morty</a>
+									<div class="row">
+										<div class="col-6">
+											<section>
+												<h3>Technologies</h3>
+												<ul>
+													<li>HTML</li>
+													<li>CSS</li>
+													<li>Materialize</li>
+													<li>Javascript</li>
+													<li>JQuery</li>
+												</ul>
+											</section>
 										</div>
-									</section>
-									<section>
-										<div class="contact-method">
-											<span class="icon solid alt fa-desktop"></span>
-											<h3>Live Site</h3>
-											<a href="https://rforde1.github.io/Rick-and-Morty/">https://rforde1.github.io/Rick-and-Morty/</a>
+										<div class="col-6">
+
+											<section>
+												<div class="contact-method">
+													<span class="icon brands alt fa-github"></span>
+													<h3>Repository</h3>
+													<a href="https://github.com/rforde1/Rick-and-Morty">https://github.com/rforde1/Rick-and-Morty</a>
+												</div>
+											</section>
+											<section>
+												<div class="contact-method">
+													<span class="icon solid alt fa-desktop"></span>
+													<h3>Live Site</h3>
+													<a href="https://rforde1.github.io/Rick-and-Morty/">https://rforde1.github.io/Rick-and-Morty/</a>
+												</div>
+											</section>
 										</div>
-									</section>
+										</div>
 								</div>
 							</section>
 
