--- a/weather.html
+++ b/weather.html
@@ -44,20 +44,37 @@
 									</header>
 									<span class="image main"><img src="images/weather.png" alt="" /></span>
 									<p>Provides current and future weather conditions for chosen cities</p>
-									<section>
-										<div class="contact-method">
-											<span class="icon brands alt fa-github"></span>
-											<h3>Repository</h3>
-											<a href="https://github.com/GReichman/weather-dashboard">https://github.com/GReichman/weather-dashboard</a>
+									<div class="row">
+										<div class="col-6">
+											<section>
+												<h3>Technologies</h3>
+												<ul>
+													<li>HTML</li>
+													<li>CSS</li>
+													<li>Bootstrap</li>
+													<li>Javascript</li>
+													<li>JQuery</li>
+												</ul>
+											</section>
 										</div>
-									</section>
-									<section>
-										<div class="contact-method">
-											<span class="icon solid alt fa-desktop"></span>
-											<h3>Live Site</h3>
-											<a href="https://greichman.github.io/weather-dashboard/">https://greichman.github.io/weather-dashboard/</a>
+										<div class="col-6">
+											
+											<section>
+												<div class="contact-method">
+													<span class="icon brands alt fa-github"></span>
+													<h3>Repository</h3>
+													<a href="https://github.com/GReichman/weather-dashboard">https://github.com/GReichman/weather-dashboard</a>
+												</div>
+											</section>
+											<section>
+												<div class="contact-method">
+													<span class="icon solid alt fa-desktop"></span>
+													<h3>Live Site</h3>
+													<a href="https://greichman.github.io/weather-dashboard/">https://greichman.github.io/weather-dashboard/</a>
+												</div>
+											</section>
 										</div>
-									</section>
+									</div>
 								</div>
 							</section>
 
